ui/components/app/assets/nfts/nft-details/index.scss
@use "design-system";

$card-width-break-large: 144px;
$link-title-width: 160px;
$spacer-break-large: 24px;
$spacer-break-small: 16px;

.buttonDescriptionContainer {
  position: absolute;
  bottom: 0;
  right: 0;
  background: linear-gradient(90deg, transparent 0%, var(--color-background-default) 33%);

  @include design-system.screen-md-min {
    bottom: 3px;
  }
}

.badge-wrapper {
  height: 70vh;
}

.fade-in {
  opacity: 0;
  transition: opacity 0.3s ease;
}

.fade-in.visible {
  opacity: 1;
}

.nft-details {
  &__nft-item {
    margin-bottom: $spacer-break-small;

    @include design-system.screen-sm-max {
      margin-bottom: 0;
      max-width: $card-width-break-large;
      flex: 0 0 $card-width-break-large;
      height: calc(100% - 8px);
    }

    margin-bottom: 0;
    max-width: $card-width-break-large;
    flex: 0 0 $card-width-break-large;
    height: calc(100% - 8px);
  }

  &__full-image-container {
    @include design-system.screen-lg-min {
      margin: 10px;
      align-items: center;
    }

    margin: 10px;
    align-items: center;
  }

  &__content {
    @include design-system.screen-lg-min {
      padding-left: 192px;
      padding-right: 192px;
      width: auto !important;
    }
  }

  &__addressButton {
    background-color: transparent;
    padding-right: 0;
  }


  &__show-more {
    max-height: 2.5rem;

    &__buttonContainer {
      position: 'absolute';
      bottom: 0;
      right: 0;
      background: linear-gradient(90deg, transparent 0%, var(--color-background-default) 33%);
    }

    @include design-system.screen-md-min {
      max-height: 3rem;
    }

    &__button {
      background: linear-gradient(90deg, transparent 0%, var(--color-background-default) 33%);
      vertical-align: baseline;
    }
  }

  &__nft-frame {
    flex: 1 0 33%;
    padding-top: 12px;
    padding-bottom: 12px;
    padding-left: 16px;
    padding-right: 16px;
    border-radius: var(--Spacing-sm, 8px);
    border: 1px solid var(--border-muted, #d6d9dc);
  }

  &__nft-attribute-frame {
    @include design-system.screen-sm-max {
      width: 48.51%;
    }

    display: inline-block;
    width: 49%;
    padding-left: 16px;
    padding-right: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
    border-radius: var(--Spacing-sm, 8px);
    border: 1px solid var(--border-muted, #d6d9dc);
  }
}

